--- a/vercel.json
+++ b/vercel.json
@@ -16,12 +16,8 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/js/(.*)",
-      "dest": "/public/js/$1"
-    },
-    {
-      "src": "/css/(.*)",
-      "dest": "/public/css/$1"
+      "src": "/(.*\\.(js|css|jpg|jpeg|png|gif|ico|svg))",
+      "dest": "/public/$1"
     },
     {
       "src": "/images/(.*)",
