--- a/vercel.json
+++ b/vercel.json
@@ -16,12 +16,24 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*\\.(js|css|jpg|jpeg|png|gif|ico|svg))",
-      "dest": "/public/$1"
+      "src": "/js/(.*)",
+      "dest": "/public/js/$1"
+    },
+    {
+      "src": "/css/(.*)",
+      "dest": "/public/css/$1"
     },
     {
       "src": "/images/(.*)",
       "dest": "/public/images/$1"
+    },
+    {
+      "src": "/(.*\\.(jpg|jpeg|png|gif|svg|webp|ico|pdf|txt|md|json))$",
+      "dest": "/public/$1"
+    },
+    {
+      "src": "/(logo\\.png|header\\.jpg|gemstone\\.jpg|diamond-sample\\.jpg|ruby-sample\\.jpg|sapphire-sample\\.jpg)$",
+      "dest": "/public/$1"
     },
     {
       "src": "/(.*)",
