--- a/vercel.json
+++ b/vercel.json
@@ -36,6 +36,10 @@
       "dest": "/public/$1"
     },
     {
+      "src": "/(upload-certificate|about|certification|contact)/?",
+      "dest": "/public/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/public/index.html"
     }
